third_party/rust_crates/forks/pin-init/tests/ui/compile-fail/pin_data/too_many_args.rs
use pin_init::*;

#[pin_data(PinnedDrop x)]
struct Foo {}

fn main() {}
