third_party/rust_crates/forks/pin-init/tests/ui/compile-fail/pin_data/too_many_args.stderr
error: unexpected token
 --> tests/ui/compile-fail/pin_data/too_many_args.rs:3:23
  |
3 | #[pin_data(PinnedDrop x)]
  |                       ^
